Added web.config options NSprockets.ConcatToSingleFile, NSprockets.Minify.

--- a/src/NSprockets.Example/Views/Home/Index.cshtml
+++ b/src/NSprockets.Example/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <html>
     <head>
         <title>NSprockets Test</title>
-        @Html.Raw(@NSprockets.NSprocketsTool.Current.GetScriptFileDeclaration("application.js"))
+        @NSprockets.NSprocketsTool.Current.GetScriptFileDeclaration("application.js")
     </head>
     <body>
         <h1>NSprockets Test</h1>
